# rustybot

./: .gitignore  .renderignore  Cargo.toml  README.md  render.yaml
src/: main.rs
static/: index.html
