[package]
name = "openrouter_rust_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
llm-chain = "0.13"
llm-chain-openai = "0.13"
async-openai = "0.16"
actix-web = "4.4"
actix-rt = "2.10"
actix-files = "0.6"
actix-cors = "0.7"
